# coding_playground

./: .gitignore  .gitmodules  asset-manifest.json  index.html  precache-manifest.0eca804524e083fd4e489f203bef6210.js  service-worker.js
QTpractice/FindDialog/: moc_FindDialog.cpp
QTpractice/qmlTransparentQt4/: mainwindow.cpp
QTpracticeSamples/FindDialog/: FindDialog.cpp
QTpracticeSamples/HelloWorld/: HelloWorld
QTpracticeSamples/qmlTransparent/: window.qml
QTpracticeSamples/qmlTransparentQt4/: Makefile
QtApps/FindDialog/: FindDialog.h  Makefile  main.cpp
QtApps/FirstInteraction/: FirstInteraction.pro  Makefile  main.cpp
QtApps/HelloWorld/: Makefile  main.cpp
QtApps/QmlVideoPlayer/: CMakeLists.txt  player.cpp
QtApps/qmlTransparent/: Makefile  transparentQml.pro
QtApps/qmlTransparentQt4/: mainwindow.h
QtApps/qtOpenGLTest/: qWidgets.h  test.qml
airflow/: Dockerfile
airflow/dags/: test_dag.py
android/HelloWorld/: README.md  build.sh
android/WebRTCTest/: README.md  build.sh
apacheSpark/: countWords.py
apacheSpark/countPrimeNumbers/: countPrimeNumbers.py
bandit/: insecureCode.py  run.sh
bash/: bash_tests.sh
cicd/: .coverage  .gitignore  Makefile  README.md  requirements.txt
cpp/Cpp11FeaturesTest/: .gitignore  CMakeLists.txt  LICENSE
cpp/tennisKata/src/: CMakeLists.txt  Player.h  Tennis.cpp  Tennis.h
cpp/tennisKata/tests/: CMakeLists.txt
cppPractiseSamples/OpenMPExample/: CMakeLists.txt  main.cpp
cppPractiseSamples/tennisKata/: .gitignore  CMakeLists.txt  LICENSE  README.md
cppPractiseSamples/tennisKata/src/: Player.cpp  main.cpp
cppPractiseSamples/tennisKata/tests/: TennisTest.cpp
devOpsPracticeSamples/: dockerPracticeSamples
elixir/: TodoList.ex  TodoListExtended.ex  decisionMakingAndStrings.ex  enumTest.ex  linkedLists.ex  loops.ex  patternMatching.ex  streamFileProcessor.ex
elixirPracticeSamples/: Fraction.ex  comperhension.ex  helloworld.ex  keywordLists.ex  loops.ex  streams.ex
git/: test_git.sh
go/: channelAndSelect.go  closure.go  functions.go  functionsAsValue.go  helloworld.go
pairing-programming/: gross_pay_1.py  gross_pay_2.py  robot_warehouse.py  split_the_treasure.py  times_square_1.py
progressiveWebApp/: index.html  manifest.json  offline.html  sw.js
python/: Counter.py  asyncioHttpRequests.py  asynciosimple.py  asynciotest.py  asynciotest_final_concurrent.py  asynciotest_with_run_in_executor.py  awaitAndAsyncTest.py  barclays_to_gnucash.py  collectionsExcercises.py  concurrencySample.py  concurrentTimeout.py  concurrentTimeout2.py  contextManagerExcercises.py  csv_to_elasticsearch.py  datetimeExcercises.py  faker_data.py  faker_data_csv.py  faker_data_json.py  flask_send_email.py  fstrings.py  generic_decorators.py  getLinks.py  itertoolsExcercises.py  loggingFormatter.py  multiprocessingHttpRequests.py  parallelForLoop.py  parallel_decorator.py  pythonChallengingExcercises.py  requests-futures.py  stringExcercises.py  timeoutRetry.py  tracebackSample.py  typingSamples.py  weather.py
pythonPractiseSamples/: calendarExcercises.py  collectionsExcercises.py  datetimeExcercises.py  difflibExcercises.py  enumExcercises.py  itertoolsExcercises.py  listSetTuple.py  mathExcercises.py  multiprocessingSample.py  neo4jInsertHelloWorld.py  parallelForLoop.py  pathExcercises.py  pprintExcercises.py  reExcercises.py  scrapGoogleSearch.py  strVsRepr.py  stringExcercises.py
qt/: .gitignore
qt_apps/qmlTransparentQt4/: CMakeLists.txt  main.cpp
rust/: closure.rs  enum.rs  filenotfound.rs  format_macro.rs  helloworld.rs  methods.rs  modules.rs  option.rs  panic.rs  slicing.rs  smartpointers  smartpointers.rs  spawnthread  spawnthread.rs  static_methods.rs  string_concat.rs  struct_and_functions.rs  structure.rs  trait.rs  variables.rs
scala/: HelloWorld.scala
terraformPracticeSamples/: create_ec2_t2_micro.tf
testcafe/: hello-world.js  run.sh
vagrant_ansible_jenkins/: Makefile  Vagrantfile  hosts  playbook.yml
webassembly/: index.html  scripts.js
(+511 files in other folders)
