PROJECT(transparent)
FIND_PACKAGE(Qt4 COMPONENTS QTCORE QTGUI QTDECLARATIVE)

SET(${PROJECT_NAME}_SOURCES main.cpp mainwindow.cpp)
SET(${PROJECT_NAME}_HEADERS mainwindow.h)
QT4_WRAP_CPP(${PROJECT_NAME}_HEADERS_MOC ${${PROJECT_NAME}_HEADERS})
INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES}  ${${PROJECT_NAME}_HEADERS_MOC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${QT_LIBRARIES})

